--- a/jupyter-editor.meta.yaml
+++ b/jupyter-editor.meta.yaml
@@ -18,7 +18,7 @@ spec:
         type: ide
   containers:
     - name: jupyter-notebook
-      image: "docker.io/ksmster/che-editor-jupyter:5.7.0"
+      image: "hub.docker.com/r/ksmster/che-editor-jupyter:5.7.0"
       env:
         - name: JUPYTER_NOTEBOOK_DIR
           value: /projects
